# numberic_err_vllm

./: .gitignore  README.md  compare_results.py  config.yaml  pyproject.toml  run_all.sh  run_eval.py  run_inference.py
Qwen/Qwen2.5-Coder-7B-Instruct-mbpp-plus/: A_transformers_bs1_eval_parsed.json  A_transformers_bs1_meta.json  A_transformers_bs1_raw.jsonl  A_transformers_bs1_samples.jsonl  A_transformers_bs1_samples_eval_results.json  B_transformers_bsN_eval_parsed.json  B_transformers_bsN_meta.json  B_transformers_bsN_raw.jsonl  B_transformers_bsN_samples.jsonl  B_transformers_bsN_samples_eval_results.json  D_vllm_serial_eval_parsed.json  D_vllm_serial_meta.json  D_vllm_serial_raw.jsonl  D_vllm_serial_samples.jsonl  E_vllm_default_eval_parsed.json  (+6 more)
deepseek-coder-7b-instruct-v1.5-mbpp-plus/: A_transformers_bs1_eval_parsed.json  A_transformers_bs1_meta.json  A_transformers_bs1_raw.jsonl  A_transformers_bs1_samples.jsonl  A_transformers_bs1_samples_eval_results.json  B_transformers_bsN_eval_parsed.json  B_transformers_bsN_meta.json  B_transformers_bsN_raw.jsonl  B_transformers_bsN_samples.jsonl  B_transformers_bsN_samples_eval_results.json  D_vllm_serial_eval_parsed.json  D_vllm_serial_meta.json  D_vllm_serial_raw.jsonl  D_vllm_serial_samples.jsonl  D_vllm_serial_samples_eval_results.json  E_vllm_default_eval_parsed.json  E_vllm_default_meta.json  E_vllm_default_raw.jsonl  E_vllm_default_samples.jsonl  E_vllm_default_samples_eval_results.json  comparison_A_transformers_bs1__vs__D_vllm_serial.xlsx
tests/: test_prompt.py
utils/: eval_utils.py  io_utils.py  prompt.py
