[project]
name = "eval-backend-compare"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "evalplus>=0.3.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pyyaml>=6.0.3",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.8.0",
    "vllm>=0.20.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
